--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/css": "^11.10.5",
     "@stencil/core": "^2.13.0",
+    "@stencil/store": "^2.0.1",
     "style-dictionary": "^3.7.1"
   },
   "devDependencies": {
